--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,16 @@
 spring:
+  sql:
+    init:
+      platform: postgres 
+  jpa:
+    database: POSTGRESQL
+    show-sql: true
+    hibernate.ddl-auto: update
+  datasource:
+    url: jdbc:postgresql://localhost:5432/Battleship
+    username: postgres
+    password: daniel    
+    driverClassName: org.postgresql.Driver
   profiles:
     active: pre
   
